crates/forge/tests/e2e/snapshots/optimize_inlining/main__e2e__optimize_inlining__snap_optimize_inlining_updates_manifest@2.20.0.snap
---
source: crates/forge/tests/e2e/optimize_inlining.rs
expression: stdout
---
Starting inlining strategy optimization...
Search range: 0 to 10, step: 10, max contract size: 4089446 bytes, max felts: 81920


[1/2] Testing threshold 0...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~1040020)


  ✓ Tests passed, gas: 1040020, max contract size: 51134 bytes, contract bytecode L2 gas: 47513600

[2/2] Testing threshold 10...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~1015880)


  ✓ Tests passed, gas: 1015880, max contract size: 28382 bytes, contract bytecode L2 gas: 32686080

Optimization Results:
╭───────────┬───────────┬───────────────┬──────────────────────────┬────────╮
│ Threshold ┆ Total Gas ┆ Contract Size ┆ Contract Bytecode L2 Gas ┆ Status │
╞═══════════╪═══════════╪═══════════════╪══════════════════════════╪════════╡
│ 0         ┆ 1040020   ┆ 51134         ┆ 47513600                 ┆ ✓      │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ 10        ┆ 1015880   ┆ 28382         ┆ 32686080                 ┆ ✓      │
╰───────────┴───────────┴───────────────┴──────────────────────────┴────────╯

Lowest runtime gas cost: threshold=10, gas=1015880, contract bytecode L2 gas=32686080
Lowest contract size cost: threshold=10, gas=1015880, contract bytecode L2 gas=32686080

Graph saved to: [..]
Updated Scarb.toml with inlining-strategy = 10
